dropshot/tests/fail/bad_endpoint13.stderr
error: Endpoint handlers must have the following signature:
           async fn(
               rqctx: std::sync::Arc<dropshot::RequestContext<MyContext>>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody<J>,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint13.rs:19:1
   |
19 | / async fn bad_response_type<S: Stuff + Sync + Send + 'static>(
20 | |     _: Arc<RequestContext<S>>,
21 | | ) -> Result<HttpResponseOk<String>, HttpError> {
   | |______________________________________________^

error: generics are not permitted for endpoint handlers
  --> tests/fail/bad_endpoint13.rs:19:27
   |
19 | async fn bad_response_type<S: Stuff + Sync + Send + 'static>(
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `S` in this scope
  --> tests/fail/bad_endpoint13.rs:20:27
   |
20 |     _: Arc<RequestContext<S>>,
   |           -               ^ not found in this scope
   |           |
   |           help: you might be missing a type parameter: `<S>`

error[E0412]: cannot find type `S` in this scope
  --> tests/fail/bad_endpoint13.rs:20:27
   |
20 |     _: Arc<RequestContext<S>>,
   |                           ^ not found in this scope
